ボール２つ表示。画面左右タッチでそれぞれ移動

--- a/manifest.json
+++ b/manifest.json
@@ -8,10 +8,18 @@
 		"libs/modules/promise/promise.js"
 	],
 	"game": [
-		"bin-debug/AssetAdapter.js",
-		"bin-debug/LoadingUI.js",
+		"bin-debug/system/GameObject.js",
 		"bin-debug/Main.js",
-		"bin-debug/Platform.js",
-		"bin-debug/ThemeAdapter.js"
+		"bin-debug/game/Player.js",
+		"bin-debug/game/Wave.js",
+		"bin-debug/system/Button.js",
+		"bin-debug/system/Camera.js",
+		"bin-debug/game/Game.js",
+		"bin-debug/system/Random.js",
+		"bin-debug/system/Rect.js",
+		"bin-debug/system/Util.js",
+		"bin-debug/view/GameOver.js",
+		"bin-debug/view/Score.js",
+		"bin-debug/view/StartMessage.js"
 	]
 }
