Lane, Block, Wave

--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,14 @@
 	],
 	"game": [
 		"bin-debug/system/GameObject.js",
-		"bin-debug/Main.js",
+		"bin-debug/system/Camera.js",
+		"bin-debug/game/Game.js",
+		"bin-debug/game/Lane.js",
 		"bin-debug/game/Player.js",
 		"bin-debug/game/Wave.js",
 		"bin-debug/system/Button.js",
-		"bin-debug/system/Camera.js",
-		"bin-debug/game/Game.js",
+		"bin-debug/game/Block.js",
+		"bin-debug/Main.js",
 		"bin-debug/system/Random.js",
 		"bin-debug/system/Rect.js",
 		"bin-debug/system/Util.js",
